--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "csanchezarisa.github.io",
+  "name": "hung_nguyen_portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://csanchezarisa.github.io",
+  "homepage": "https://Thohung95.github.io",
   "dependencies": {
     "@chakra-ui/react": "^2.2.6",
     "@emailjs/browser": "^3.6.2",
@@ -59,5 +59,9 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0"
-  }
+  },
+  "description": "<img height=\"128\" alt=\"Csanchezarisa + React\" src=\"Csanchezarisa+React.png\">",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
