--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "short_name": "csanchezarisa - Software Engineer",
-  "name": "csanchezarisa portfolio app",
+  "short_name": "Hung Nguyen - Web Developer",
+  "name": "Hung Nguyen portfolio app",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     },
     {
       "src": "logo192.png",
